--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,9 @@
 2013-04-04  Vladimir Serbinenko  <phcoder@gmail.com>
+
+	Unify file copying setup across different install scripts. Add
+	options for performing partial install.
+
+2013-04-04  Vladimir Serbinenko  <phcoder@gmail.com>
 2013-04-04  Peter Jones <pjones@redhat.com>
 
 	* grub-core/disk/efi/efidisk.c: Handle partitions on non-512B disks.
