--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2013-04-05  Vladimir Serbinenko  <phcoder@gmail.com>
+
+	Move GRUB_CHAR_BIT to types.h.
+
 2013-04-04  Andrey Borzenkov <arvidjaar@gmail.com>
 
 	* docs/grub.texi: Document more user commands.
