--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2013-04-05  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	* include/grub/bsdlabel.h: Use enums.
+
+2013-04-05  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	Move GRUB_CHAR_BIT to types.h.
 
 2013-04-04  Andrey Borzenkov <arvidjaar@gmail.com>
