--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2013-04-05  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	* grub-core/commands/acpi.c: Use sizeof rather than hardcoding the size.
+
+2013-04-05  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	Replace 8 with GRUB_CHAR_BIT in several places when appropriate.
 
 2013-04-05  Vladimir Serbinenko  <phcoder@gmail.com>
