--- a/docs/grub.texi
+++ b/docs/grub.texi
@@ -1290,9 +1290,8 @@ As @samp{GRUB_CMDLINE_LINUX}, but for GNU Mach.
 
 @item GRUB_CMDLINE_XEN
 @itemx GRUB_CMDLINE_XEN_DEFAULT
-The values of these options are appended to the values of
-@samp{GRUB_CMDLINE_LINUX} and @samp{GRUB_CMDLINE_LINUX_DEFAULT} for Linux
-and Xen menu entries.
+The values of these options are passed to Xen hypervisor Xen menu entries,
+for all respectively normal entries.
 
 @item GRUB_CMDLINE_LINUX_XEN_REPLACE
 @item GRUB_CMDLINE_LINUX_XEN_REPLACE_DEFAULT
