* tests/util/grub-shell.in: Fix it on powerpc.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2013-04-12  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	* tests/util/grub-shell.in: Fix it on powerpc.
+
+2013-04-12  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	Turn off QEMU ACPI-way since new releases don't have shutdown port
 	anymore.
 
